crates/pixi_build_discovery/tests/snapshots/discovery__discovery@missing-preview-feature.snap
---
source: crates/pixi_build_discovery/tests/discovery.rs
assertion_line: 81
expression: "pixi_test_utils :: format_diagnostic(& err)"
input_file: tests/data/discovery/missing-preview-feature/TEST-CASE
---
  × the pixi.toml file at '<CARGO_ROOT>/tests/data/discovery/missing-preview-feature' contains a [package] section but the 'pixi-build' preview feature is not enabled
  help: Add 'preview = ["pixi-build"]' under the [workspace] or [project] section in the workspace manifest.
